<resources>
    <string name="app_name">Gymphy</string>
    <string name="once_you_see_results_it_becomes_an_addiction">ONCE YOU SEE RESULTS, IT BECOMES AN ADDICTION</string>
    <string name="aa">Back and biceps</string>
    <string name="ch">chest and triceps</string>
    <string name="s">Legs</string>
    <string name="c">Shoulders and traps</string>
    <string name="v">Back and biceps</string>
    <string name="sd">chest and triceps</string>
    <string name="x">Legs</string>
    <string name="p">Shoulders and traps</string>
    <string name="cronometer">Cronometer</string>
    <string name="_1_lat_pulldowns_12_reps">1.Lat Pulldowns - 12 Reps</string>
    <string name="save1">Save</string>
    <string name="dumbbell_row">3.Dumbbell Row</string>
    <string name="preacher_curls_12_reps">4.Preacher Curls - 12 Reps</string>
    <string name="dumbbell_curls_12_reps">5.Dumbbell Curls - 12 Reps</string>
    <string name="wide_grip_seated_cable_row_12_reps">2.Wide-Grip Seated Cable Row - 12 Reps</string>
    <string name="standing_cable_row_12_reps">6.Standing Cable Row - 12 Reps</string>
    <string name="bench_press_12_reps">1.Bench Press - 12 Reps</string>
    <string name="machine_fly_12_reps">2.Machine Fly - 12 Reps</string>
    <string name="machine_chest_press_12_reps">3.Machine Chest Press - 12 Reps</string>
    <string name="close_grip_bench_press_12_reps">6.Close-Grip Bench Press - 12 Reps</string>
    <string name="_4_two_arm_cable_triceps_12_reps">4.Two-Arm Cable Triceps - 12 Reps</string>
    <string name="_5_one_arm_cable_triceps_12_reps">5.One-Arm Cable Triceps - 12 Reps</string>
    <string name="_4_double_rope_triceps_12_reps">4.Double Rope Triceps - 12 Reps</string>
    <string name="_1_leg_curl_14_reps">1.Leg Curl - 14 Reps</string>
    <string name="_2_leg_extension_14_reps">2.Leg Extension - 14 Reps</string>
    <string name="_3_leg_press_14_reps">3.Leg Press - 14 Reps</string>
    <string name="_4_abductor_machine_14_reps">4.Abductor Machine - 14 Reps</string>
    <string name="_5_adductor_machine_14_reps">5.Adductor Machine - 14 Reps</string>
    <string name="_6_standing_calf_raises_14_reps">6.Standing Calf Raises - 14 Reps</string>
    <string name="arnol_press">1.Arnold Press - 12 Reps</string>
    <string name="dumbbell_front_raise_12_reps">2.Dumbbell Front Raise - 12 Reps</string>
    <string name="_3_bent_over_dumbbell_raise_12_reps">3.Bent Over Dumbbell Raise - 12 Reps</string>
    <string name="_4_dumbbell_shrug_12_reps">4.Dumbbell Shrug - 12 Reps</string>
    <string name="start1">Start</string>
    <string name="pause1">Pause</string>
    <string name="stop1">Stop</string>
    <string name="end">End</string>
    <string name="shuffle">shuffle</string>
    <string name="back1">Back</string>
</resources>
