<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bench_press_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chest1"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_fly_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chest2"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_chest_press_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chest3"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_double_rope_triceps_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triceps1"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_one_arm_cable_triceps_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triceps2"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_grip_bench_press_12_reps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triceps3"
                android:layout_gravity="center"

                />


            <EditText
                android:id="@+id/chest_and_triceps_editText_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="My Notes"
                android:textSize="18sp"

                />

            <Button
                android:id="@+id/chest_and_triceps_save_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save1"
                android:layout_gravity="center"
                android:background="#1A237E"
                android:textColor="#E0E0E0"

                />


        </LinearLayout>


    </ScrollView>

</LinearLayout>